<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">The World</string>
    <string name="charaMake01">名前を入力してくれッ！</string>
    <string name="charaMake02">スタンドを決めてくれッ！</string>
    <string name="charaMake03">スタンドの能力値を決めるぞッ！</string>
    <string name="charaMake04">音声入力</string>
    <string name="charaMake05">スタンド名</string>
    <string name="charaMake06">パンチ入力</string>
    <string name="charaMake07">ジョジョ立ち</string>
    <string name="charaMake08">次に進めッ！</string>
    <string name="charaMake09">対戦相手を選べッ！</string>
    <string name="charaMake10">検索開始</string>
    <string name="charaMake11">OK</string>
    <string name="charaMake12">声パワー</string>

    <string name="bar01">□□□□□□□□□□</string>
    <string name="battleMes01">Fight!!</string>
    
    <!-- エラーメッセージ -->
    <string name="err_mes_001">音声認識対応ツールがインストールされていません</string>
</resources>
