<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent" 
	android:layout_width="fill_parent"
	android:orientation="vertical"
	android:background="@drawable/jojo_a1"
	android:scaleType="fitCenter" >
	<TextView 
		android:text="@string/charaMake09"
		android:textColor="@color/red"
		style="@style/defaultTheme"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/textView1">
	</TextView>
	<Button 
		android:text="@string/charaMake10"
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content"
		android:id="@+id/button_serch">
	</Button>
	<Button 
		android:text="@string/charaMake11"
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content"
		android:id="@+id/button_ok">
	</Button>
</LinearLayout>
